# minuSQLe

./: CMakeLists.txt  LICENSE  Makefile
src/: common.h  cursor.c  cursor.h  main.c  pager.c  pager.h  prepr.c  prepr.h  stmt.c  stmt.h  table.c  table.h  term.c  term.h  tokenizer.c  tokenizer.h  util.c  util.h
tests/: test_tokenizer.c
tests/test_terminal/: test.py
